Implementacion de nuevos modulos

--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -1,17 +1,26 @@
   <!-- Nav -->
   <nav id="nav">
     <ul>
-      <li><a href="./Inicio">Inicio</a></li>
+      <li><a href="./">Inicio</a></li>
       <li><a href="./SanRoqueCifras">San Roque En Cifras</a></li>
-      <li><a href="./Error">Acerca del Proyecto</a></li>
+      <li><a>Acerca del Proyecto</a>
+        <ul>
+          <li><a href="./AcercaDe">Área Operativa Del Proyecto</a></li>
+          <li><a href="./Linea">Línea de Tiempo</a></li>
+          <li><a href="./Programas">Programas</a></li>
+          <li><a href="./Entregables">Entregables Asociados</a></li>
+          <li><a href="./Implementacion">Plan de Implementación</a></li>
+          <li><a href="./Agradecimientos">Agradecimientos</a></li>
+        </ul>
+      </li>
       <li><a href="./NuestroEquipo">Nuestro Equipo</a></li>
-      <li><a href="./NuestraComunidad">Nuestra Comunidad</a>
+      <li><a>Nuestra Comunidad</a>
         <ul>
           <li>
+            <a href="./NuestraComunidad">Nuestra Comunidad &hellip;</a>
+          </li>
+          <li>
             <a href="ComunicacionC">Comunicacion con La Comunidad &hellip;</a>
-            <ul>
-              <li><a href="">Proximamente</a></li>
-            </ul>
           </li>
         </ul>
       </li>
