--- a/src/app/modules/comunicacion-comunidad/comunicacion-comunidad/comunicacion-comunidad.component.html
+++ b/src/app/modules/comunicacion-comunidad/comunicacion-comunidad/comunicacion-comunidad.component.html
@@ -3,26 +3,17 @@
   <!-- Inner -->
   <div class="inner">
     <header>
-      <h2 style="color: #fff;">Tecnicas Etnograficas y Estrategias Participativas.</h2>
+      <p class="Subtitulo">Tecnicas Etnograficas y Estrategias Participativas.</p>
     </header>
   </div>
 </div>
 <div class="wrapper style2" id="banner">
-    <header>
-        <h2>Tecnicas Etnograficas</h2>
-      </header>
-  <article id="main" class="container special">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita officia placeat vitae et dolorem accusamus, aut
-      enim magni voluptas magnam similique nihil, ea itaque nesciunt illum, nobis ex veniam hic.</p>
-  </article>
-</div>
-<hr/>
-<div class="wrapper style2" id="banner">
-    <header>
-        <h2>Estrategias Participativas.</h2>
-      </header>
-  <article id="main" class="container special">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, sed veniam doloremque velit tenetur corrupti sit
-      architecto earum ex nemo voluptates, temporibus, id ab aliquam expedita vitae neque quibusdam ad?</p>
-  </article>
+  <div class="Genialy">
+    <div class="container-wrapper-genially"><video class="loader-genially" autoplay="autoplay" loop="loop"
+        playsinline="playsInline" muted="muted">
+        <source src="https://static.genial.ly/resources/panel-loader-low.mp4" type="video/mp4" />Your browser does not
+        support the video tag.</video>
+      <div id="5f9f4eaf0c6fbe0d0f39afa4" class="genially-embed"></div>
+    </div>
+  </div>
 </div>
