--- a/src/app/modules/inicio/index/index.component.html
+++ b/src/app/modules/inicio/index/index.component.html
@@ -34,42 +34,122 @@
     </p>
   </article>
   <footer>
-<div class="SubTitulos">
-  <p class="NegrillaText">Conoce los programas que hacen parte del Plan de Saneamiento Básico de la vereda San Roque</p>
-</div>
+    <div class="SubTitulos">
+      <p class="NegrillaText">Conoce los programas que hacen parte del Plan de Saneamiento Básico de la vereda San Roque
+      </p>
+    </div>
 
     <div class="ContainerCirculos">
       <div class="TituloImagen">
         <div class="DecripcionTitulo">
-          <img src="../../../../images/Logos/Circulo1.png" alt="">
+          <div class="page">
+            <div class="page__container">
+              <a href="#popup-article" class="open-popup"><img src="../../../../images/Logos/Circulo1.png" alt=""></a>
+            </div>
+          </div>
+          <div id="popup-article" class="popup">
+            <div class="popup__block">
+              <h1 class="popup__title" style="color: #fff ;">Conoce el eje de calidad de agua del proyecto plan de
+                saneamiento básico en la vereda San Roque</h1>
+              <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                  frameborder="0" width="1200px" height="675px"
+                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                  src="https://view.genial.ly/5f9e0e325d01a40d4a97fc3b" type="text/html" allowscriptaccess="always"
+                  allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+              <a href="#" class="popup__close">close</a>
+            </div>
+          </div>
           <p>Programa de Calidad de Agua</p>
         </div>
       </div>
       <div class="TituloImagen">
         <div class="DecripcionTitulo">
-          <img src="../../../../images/Logos/Circulo2.png" alt="">
+          <div class="page">
+            <div class="page__container">
+              <a href="#popup-article1" class="open-popup"><img src="../../../../images/Logos/Circulo2.png" alt=""></a>
+            </div>
+          </div>
+          <div id="popup-article1" class="popup">
+            <div class="popup__block">
+              <h1 class="popup__title" style="color: #fff ;">Conoce el eje de residuos sólidos del proyecto plan de
+                saneamiento básico en la vereda San Roque</h1>
+              <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                  frameborder="0" width="1200px" height="675px"
+                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                  src="https://view.genial.ly/5f9f00e80c6fbe0d0f39aa7c" type="text/html" allowscriptaccess="always"
+                  allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+              <a href="#" class="popup__close">close</a>
+            </div>
+          </div>
           <p>Programa de Residuos Sólidos</p>
         </div>
       </div>
       <div class="TituloImagen">
         <div class="DecripcionTitulo">
-          <img src="../../../../images/Logos/Circulo3.png" alt="">
+          <div class="page">
+            <div class="page__container">
+              <a href="#popup-article2" class="open-popup"><img src="../../../../images/Logos/Circulo3.png" alt=""></a>
+            </div>
+          </div>
+          <div id="popup-article2" class="popup">
+            <div class="popup__block">
+              <h1 class="popup__title" style="color: #fff ;">Conoce el eje de plagas y vectores del proyecto plan de
+                saneamiento básico en la vereda San Roque</h1>
+              <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                  frameborder="0" width="1200px" height="675px"
+                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                  src="https://view.genial.ly/5f9f6e72918e3b0d2a834415" type="text/html" allowscriptaccess="always"
+                  allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+              <a href="#" class="popup__close">close</a>
+            </div>
+          </div>
           <p>Programa de Plagas y Vectores</p>
         </div>
       </div>
       <div class="TituloImagen">
         <div class="DecripcionTitulo">
-          <img src="../../../../images/Logos/Circulo4.png" alt="">
+          <div class="page">
+            <div class="page__container">
+              <a href="#popup-article3" class="open-popup"><img src="../../../../images/Logos/Circulo4.png" alt=""></a>
+            </div>
+          </div>
+          <div id="popup-article3" class="popup">
+            <div class="popup__block">
+              <h1 class="popup__title" style="color: #fff ;">Conoce el eje de aguas residuales del proyecto plan de
+                saneamiento básico en la vereda San Roque</h1>
+              <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                  frameborder="0" width="1200px" height="675px"
+                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                  src="https://view.genial.ly/5f9f18df918e3b0d2a833da4" type="text/html" allowscriptaccess="always"
+                  allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+              <a href="#" class="popup__close">close</a>
+            </div>
+          </div>
           <p>Programa de Aguas Residuales</p>
         </div>
       </div>
       <div class="TituloImagen">
         <div class="DecripcionTitulo">
-          <img src="../../../../images/Logos/Circulo5.png" alt="">
-          <p>Programa de Limpieza y Desifencción</p>
+          <div class="page">
+            <div class="page__container">
+              <a href="#popup-article4" class="open-popup"><img src="../../../../images/Logos/Circulo5.png" alt=""></a>
+            </div>
+          </div>
+          <div id="popup-article4" class="popup">
+            <div class="popup__block">
+              <h1 class="popup__title" style="color: #fff ;">Conoce el eje de aguas residuales del proyecto plan de
+                saneamiento básico en la vereda San Roque</h1>
+              <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                  frameborder="0" width="1200px" height="675px"
+                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                  src="https://view.genial.ly/5f9f3c535210480d31d80940" type="text/html" allowscriptaccess="always"
+                  allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+              <a href="#" class="popup__close">close</a>
+            </div>
+          </div>
+          <p>Programa de Limpieza y Desinfección</p>
         </div>
       </div>
     </div>
   </footer>
 </div>
-
