--- a/src/app/modules/nuestroequipo/equipo/equipo.component.html
+++ b/src/app/modules/nuestroequipo/equipo/equipo.component.html
@@ -48,7 +48,7 @@
   <section class="carousel">
     <div class="reel">
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/3.png" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/3.png" alt="" /></a>
         <header>
           <p>Nathaly Juliana Castillo Valderrama</p>
         </header>
@@ -62,7 +62,7 @@
         </p>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/4.png" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/4.png" alt="" /></a>
         <header>
           <p>Willson Smith Ortega Martinez</p>
         </header>
@@ -76,7 +76,7 @@
         </p>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/1.png" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/1.png" alt="" /></a>
         <header>
           <p>María Camila Villaruel Cruz</p>
         </header>
@@ -89,7 +89,7 @@
         </p>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/5.png" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/5.png" alt="" /></a>
         <header>
           <p>Yeferson Stiven Mendez Torres</p>
         </header>
@@ -103,7 +103,7 @@
         </p>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/2.png" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/2.png" alt="" /></a>
         <header>
           <p>Laura Milena Rubiano Camacho</p>
         </header>
