--- a/src/app/layout/footer-pag/footer-pag.component.html
+++ b/src/app/layout/footer-pag/footer-pag.component.html
@@ -1,11 +1,5 @@
-<div id="footer">
+<div id="footer" style="margin-top: 1em;">
   <div class="container">
-
-    <div class="row">
-
-
-    </div>
-    <hr />
     <div class="row">
       <div class="col-12">
         <div class="LogosCnetrados">
