--- a/src/app/modules/comunidad/sanroque/sanroque.component.html
+++ b/src/app/modules/comunidad/sanroque/sanroque.component.html
@@ -18,16 +18,16 @@
     <div class="reel">
 
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P6.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P6.jpeg" alt="" /></a>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P5.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P5.jpeg" alt="" /></a>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P12.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P12.jpeg" alt="" /></a>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P7.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P7.jpeg" alt="" /></a>
       </article>
     </div>
   </section>
@@ -38,25 +38,25 @@
     <div class="reel">
 
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P4.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P4.jpeg" alt="" /></a>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P2.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P2.jpeg" alt="" /></a>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P6.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P6.jpeg" alt="" /></a>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P7.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P7.jpeg" alt="" /></a>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P8.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P8.jpeg" alt="" /></a>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P10.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P10.jpeg" alt="" /></a>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P11.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P11.jpeg" alt="" /></a>
       </article>
     </div>
   </section>
@@ -67,13 +67,13 @@
     <div class="reel">
 
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P1.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P1.jpeg" alt="" /></a>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P9.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P9.jpeg" alt="" /></a>
       </article>
       <article>
-        <a href="#" class="image featured"><img src="images/Personas/P3.jpeg" alt="" /></a>
+        <a href="#" class="image featured"><img loading="lazy" src="images/Personas/P3.jpeg" alt="" /></a>
       </article>
     </div>
   </section>
