--- a/src/app/modules/contacto/contact/contact.component.css
+++ b/src/app/modules/contacto/contact/contact.component.css
@@ -29,8 +29,8 @@
 
 .left-col {
   width: 50%;
-  height: 100%;
-  background-image: url("https://images.pexels.com/photos/931018/pexels-photo-931018.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+  height: 120%;
+  background-image: url("./../../../../assets/images/FondoC.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -289,6 +289,7 @@ input:checked+.slider:before {
   }
 
   .contact-container {
+
     display: block;
     width: 100%;
   }
@@ -296,12 +297,14 @@ input:checked+.slider:before {
   .left-col {
     width: 100%;
     height: 20%;
+    margin: 5em;
   }
 
   .right-col {
     width: 100%;
     height: auto;
     padding: 1rem 2.5rem;
+    margin: 5em;
   }
 
   input,
