--- a/src/app/modules/contacto/contact/contact.component.css
+++ b/src/app/modules/contacto/contact/contact.component.css
@@ -23,13 +23,14 @@
 .contact-container {
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 130vh;
   background: var(--bg-color);
 }
 
 .left-col {
+  display: flex;
   width: 50%;
-  height: 120%;
+  height: 100%;
   background-image: url("./../../../../assets/images/FondoC.png");
   background-size: cover;
   background-repeat: no-repeat;
