--- a/src/app/modules/contacto/contact/contact.component.html
+++ b/src/app/modules/contacto/contact/contact.component.html
@@ -10,10 +10,9 @@
 <div class="wrapper style1">
   <div class="contact-container">
     <div class="left-col">
-      <img class="logo" src="https://www.indonesia.travel/content/dam/indtravelrevamp/en/logo.png" />
     </div>
     <div class="right-col">
-      <h1>Dejanos tú comentario</h1>
+      <h1>Déjanos tú comentario</h1>
 
       <form id="contact-form" [formGroup]="FormData" (ngSubmit)="onSubmit(FormData.value)">
         <div class="form-group">
