--- a/src/app/modules/implementacionm/implementacionm/implementacionm.component.html
+++ b/src/app/modules/implementacionm/implementacionm/implementacionm.component.html
@@ -1,1 +1,21 @@
-<p>implementacionm works!</p>
+<!-- Header -->
+<div id="header">
+  <!-- Inner -->
+  <div class="inner">
+    <header>
+    </header>
+  </div>
+</div>
+<div class="wrapper style2" id="banner">
+  <header>
+    <h2><a>Plan De Implementación</a></h2>
+  </header>
+  <div class="Genialy">
+    <div class="container-wrapper-genially"><video
+        class="loader-genially" autoplay="autoplay" loop="loop" playsinline="playsInline" muted="muted">
+        <source src="https://static.genial.ly/resources/panel-loader-low.mp4" type="video/mp4" />Your browser does not
+        support the video tag.</video>
+      <div id="5fb09d3754c03e0d3d6b42a5" class="genially-embed"></div>
+    </div>
+  </div>
+</div>
