--- a/src/app/modules/inicio/index/index.component.html
+++ b/src/app/modules/inicio/index/index.component.html
@@ -4,7 +4,7 @@
   <!-- Inner -->
   <div class="inner">
     <header>
-      <h1><a href="index.html" id="logo" class="LogoPersonalizado">TSM GR 05
+      <h1><a href="index.html" id="logo" class="LogoPersonalizado">TSM GR 05 2020 - 2
         </a></h1>
       <p class="Subtitulo">Plan de Saneamiento Básico en la vereda San Roque del municipio de Marquetalia-Caldas</p>
       <hr />
@@ -42,21 +42,30 @@
     <div class="ContainerCirculos">
       <div class="TituloImagen">
         <div class="DecripcionTitulo">
-          <div class="page">
-            <div class="page__container">
-              <a href="#popup-article" class="open-popup"><img src="../../../../images/Logos/Circulo1.png" alt=""></a>
-            </div>
-          </div>
-          <div id="popup-article" class="popup">
-            <div class="popup__block">
-              <h1 class="popup__title" style="color: #fff ;">Conoce el eje de calidad de agua del proyecto plan de
-                saneamiento básico en la vereda San Roque</h1>
-              <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
-                  frameborder="0" width="1200px" height="675px"
-                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-                  src="https://view.genial.ly/5f9e0e325d01a40d4a97fc3b" type="text/html" allowscriptaccess="always"
-                  allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
-              <a href="#" class="popup__close">close</a>
+          <a data-toggle="modal" data-target="#exampleModal4"><img src="../../../../images/Logos/Circulo1.png"
+              alt=""></a>
+
+          <div class="modal fade bd-example-modal-lg" id="exampleModal4" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Programa de Calidad de Agua</h5>
+                  <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span> 
+                  </button>-->
+                </div>
+                <div class="modal-body">
+                  <div class="IframePop" style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;">
+                    <iframe frameborder="0" width="1200px" height="675px"
+                      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                      src="https://view.genial.ly/5f9e0e325d01a40d4a97fc3b" type="text/html" allowscriptaccess="always"
+                      allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
             </div>
           </div>
           <p>Programa de Calidad de Agua</p>
@@ -64,21 +73,30 @@
       </div>
       <div class="TituloImagen">
         <div class="DecripcionTitulo">
-          <div class="page">
-            <div class="page__container">
-              <a href="#popup-article1" class="open-popup"><img src="../../../../images/Logos/Circulo2.png" alt=""></a>
-            </div>
-          </div>
-          <div id="popup-article1" class="popup">
-            <div class="popup__block">
-              <h1 class="popup__title" style="color: #fff ;">Conoce el eje de residuos sólidos del proyecto plan de
-                saneamiento básico en la vereda San Roque</h1>
-              <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
-                  frameborder="0" width="1200px" height="675px"
-                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-                  src="https://view.genial.ly/5f9f00e80c6fbe0d0f39aa7c" type="text/html" allowscriptaccess="always"
-                  allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
-              <a href="#" class="popup__close">close</a>
+          <a data-toggle="modal" data-target="#exampleModal3"><img src="../../../../images/Logos/Circulo2.png"
+              alt=""></a>
+
+          <div class="modal fade bd-example-modal-lg" id="exampleModal3" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Programa de Residuos Sólidos</h5>
+                  <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span> 
+                  </button>-->
+                </div>
+                <div style="width: 100%;">
+                  <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                      frameborder="0" width="1200px" height="675px"
+                      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                      src="https://view.genial.ly/5faf4a557acc290d048a4463" type="text/html" allowscriptaccess="always"
+                      allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
             </div>
           </div>
           <p>Programa de Residuos Sólidos</p>
@@ -86,21 +104,30 @@
       </div>
       <div class="TituloImagen">
         <div class="DecripcionTitulo">
-          <div class="page">
-            <div class="page__container">
-              <a href="#popup-article2" class="open-popup"><img src="../../../../images/Logos/Circulo3.png" alt=""></a>
-            </div>
-          </div>
-          <div id="popup-article2" class="popup">
-            <div class="popup__block">
-              <h1 class="popup__title" style="color: #fff ;">Conoce el eje de plagas y vectores del proyecto plan de
-                saneamiento básico en la vereda San Roque</h1>
-              <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
-                  frameborder="0" width="1200px" height="675px"
-                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-                  src="https://view.genial.ly/5f9f6e72918e3b0d2a834415" type="text/html" allowscriptaccess="always"
-                  allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
-              <a href="#" class="popup__close">close</a>
+          <a data-toggle="modal" data-target="#exampleModal2"><img src="../../../../images/Logos/Circulo3.png"
+              alt=""></a>
+
+          <div class="modal fade bd-example-modal-lg" id="exampleModal2" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Programa de Plagas y Vectores</h5>
+                  <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span> 
+                  </button>-->
+                </div>
+                <div class="modal-body">
+                  <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                      frameborder="0" width="1200px" height="675px"
+                      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                      src="https://view.genial.ly/5f9f6e72918e3b0d2a834415" type="text/html" allowscriptaccess="always"
+                      allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
             </div>
           </div>
           <p>Programa de Plagas y Vectores</p>
@@ -108,45 +135,68 @@
       </div>
       <div class="TituloImagen">
         <div class="DecripcionTitulo">
-          <div class="page">
-            <div class="page__container">
-              <a href="#popup-article3" class="open-popup"><img src="../../../../images/Logos/Circulo4.png" alt=""></a>
-            </div>
-          </div>
-          <div id="popup-article3" class="popup">
-            <div class="popup__block">
-              <h1 class="popup__title" style="color: #fff ;">Conoce el eje de aguas residuales del proyecto plan de
-                saneamiento básico en la vereda San Roque</h1>
-              <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
-                  frameborder="0" width="1200px" height="675px"
-                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-                  src="https://view.genial.ly/5f9f18df918e3b0d2a833da4" type="text/html" allowscriptaccess="always"
-                  allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
-              <a href="#" class="popup__close">close</a>
+          <a data-toggle="modal" data-target="#exampleModal1"><img src="../../../../images/Logos/Circulo4.png"
+              alt=""></a>
+
+          <div class="modal fade bd-example-modal-lg" id="exampleModal1" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Programa de Aguas Residuales</h5>
+                  <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span> 
+                  </button>-->
+                </div>
+                <div class="modal-body">
+                  <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                      frameborder="0" width="1200px" height="675px"
+                      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                      src="https://view.genial.ly/5f9f18df918e3b0d2a833da4" type="text/html" allowscriptaccess="always"
+                      allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
             </div>
           </div>
           <p>Programa de Aguas Residuales</p>
         </div>
       </div>
+
       <div class="TituloImagen">
         <div class="DecripcionTitulo">
-          <div class="page">
-            <div class="page__container">
-              <a href="#popup-article4" class="open-popup"><img src="../../../../images/Logos/Circulo5.png" alt=""></a>
+
+          <a data-toggle="modal" data-target="#exampleModal"><img src="../../../../images/Logos/Circulo5.png"
+              alt=""></a>
+
+          <div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Programa de Limpieza y Desinfección</h5>
+                  <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span> 
+                  </button>-->
+                </div>
+                <div class="modal-body">
+                  <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                      frameborder="0" width="1200px" height="720px"
+                      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                      src="https://view.genial.ly/5f9f3c535210480d31d80940" type="text/html" allowscriptaccess="always"
+                      allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
             </div>
           </div>
-          <div id="popup-article4" class="popup">
-            <div class="popup__block">
-              <h1 class="popup__title" style="color: #fff ;">Conoce el eje de aguas residuales del proyecto plan de
-                saneamiento básico en la vereda San Roque</h1>
-              <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
-                  frameborder="0" width="1200px" height="675px"
-                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-                  src="https://view.genial.ly/5f9f3c535210480d31d80940" type="text/html" allowscriptaccess="always"
-                  allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
-              <a href="#" class="popup__close">close</a>
-            </div>
-          </div>
+
+
+
           <p>Programa de Limpieza y Desinfección</p>
         </div>
       </div>
