--- a/src/app/modules/inicio/index/index.component.css
+++ b/src/app/modules/inicio/index/index.component.css
@@ -247,10 +247,11 @@ p:nth-child(n+2) {
   border: 1px solid;
 }
 
-.page {}
+.page {
+
+}
 
 .page__container {
   max-width: 1200px;
-
   margin: auto;
 }
