--- a/src/app/modules/progrmasm/progrmasm/progrmasm.component.html
+++ b/src/app/modules/progrmasm/progrmasm/progrmasm.component.html
@@ -13,84 +13,162 @@
     <div class="ContainerCirculos">
       <div class="TituloImagen">
         <div class="DecripcionTitulo">
-          <p>Programa de Calidad de Agua</p>
-          <img src="../../../../images/Logos/Circulo1.png" alt="">
-          <div class="Genialy">
-            <div class="container-wrapper-genially"><video class="loader-genially" autoplay="autoplay" loop="loop"
-                playsinline="playsInline" muted="muted">
-                <source src="https://static.genial.ly/resources/panel-loader-low.mp4" type="video/mp4" />Your browser
-                does not
-                support the video tag.</video>
-              <div id="5f9e0e325d01a40d4a97fc3b" class="genially-embed"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="TituloImagen">
-        <div class="DecripcionTitulo">
-          <p>Programa de Residuos Sólidos</p>
-          <img src="../../../../images/Logos/Circulo2.png" alt="">
-          <div class="Genialy">
-            <div class="container-wrapper-genially"><video class="loader-genially" autoplay="autoplay" loop="loop"
-                playsinline="playsInline" muted="muted">
-                <source src="https://static.genial.ly/resources/panel-loader-low.mp4" type="video/mp4" />Your browser
-                does not
-                support the video tag.</video>
-              <div id="5f9f00e80c6fbe0d0f39aa7c" class="genially-embed"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="TituloImagen">
-        <div class="DecripcionTitulo">
-          <p>Programa de Plagas y Vectores</p>
-          <img src="../../../../images/Logos/Circulo3.png" alt="">
-          <h1 class="popup__title" style="color: #fff ;">Conoce el eje de plagas y vectores del proyecto plan de
-            saneamiento básico en la vereda San Roque</h1>
-          <div class="Genialy">
-            <div class="container-wrapper-genially"><video class="loader-genially" autoplay="autoplay" loop="loop"
-                playsinline="playsInline" muted="muted">
-                <source src="https://static.genial.ly/resources/panel-loader-low.mp4" type="video/mp4" />Your browser
-                does not
-                support the video tag.</video>
-              <div id="5f9f6e72918e3b0d2a834415" class="genially-embed"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="TituloImagen">
-        <div class="DecripcionTitulo">
-          <p>Programa de Aguas Residuales</p>
-          <img src="../../../../images/Logos/Circulo4.png" alt="">
-          <h1 class="popup__title" style="color: #fff ;">Conoce el eje de aguas residuales del proyecto plan de
-            saneamiento básico en la vereda San Roque</h1>
-          <div class="Genialy">
-            <div class="container-wrapper-genially"><video class="loader-genially" autoplay="autoplay" loop="loop"
-                playsinline="playsInline" muted="muted">
-                <source src="https://static.genial.ly/resources/panel-loader-low.mp4" type="video/mp4" />Your browser
-                does not
-                support the video tag.</video>
-              <div id="5f9f18df918e3b0d2a833da4" class="genially-embed"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="TituloImagen">
-        <div class="DecripcionTitulo">
-          <p>Programa de Limpieza y Desinfección</p>
-          <img src="../../../../images/Logos/Circulo5.png" alt="">
-          <h1 class="popup__title" style="color: #fff ;">Conoce el eje de aguas residuales del proyecto plan de
-            saneamiento básico en la vereda San Roque</h1>
-          <div class="Genialy">
-            <div class="container-wrapper-genially"><video class="loader-genially" autoplay="autoplay" loop="loop"
-                playsinline="playsInline" muted="muted">
-                <source src="https://static.genial.ly/resources/panel-loader-low.mp4" type="video/mp4" />Your browser
-                does not
-                support the video tag.</video>
-              <div id="5f9f3c535210480d31d80940" class="genially-embed"></div>
-            </div>
+          <a data-toggle="modal" data-target="#exampleModal4"><img src="../../../../images/Logos/Circulo1.png"
+              alt=""></a>
 
+          <div class="modal fade bd-example-modal-lg" id="exampleModal4" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Programa de Calidad de Agua</h5>
+                  <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span> 
+                  </button>-->
+                </div>
+                <div class="modal-body">
+                  <div class="IframePop" style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;">
+                    <iframe frameborder="0" width="1200px" height="675px"
+                      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                      src="https://view.genial.ly/5f9e0e325d01a40d4a97fc3b" type="text/html" allowscriptaccess="always"
+                      allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
+            </div>
           </div>
+          <p>Programa de Calidad de Agua</p>
+        </div>
+      </div>
+      <div class="TituloImagen">
+        <div class="DecripcionTitulo">
+          <a data-toggle="modal" data-target="#exampleModal3"><img src="../../../../images/Logos/Circulo2.png"
+              alt=""></a>
+
+          <div class="modal fade bd-example-modal-lg" id="exampleModal3" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Programa de Residuos Sólidos</h5>
+                  <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span> 
+                  </button>-->
+                </div>
+                <div style="width: 100%;">
+                  <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                      frameborder="0" width="1200px" height="675px"
+                      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                      src="https://view.genial.ly/5faf4a557acc290d048a4463" type="text/html" allowscriptaccess="always"
+                      allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>Programa de Residuos Sólidos</p>
+        </div>
+      </div>
+      <div class="TituloImagen">
+        <div class="DecripcionTitulo">
+          <a data-toggle="modal" data-target="#exampleModal2"><img src="../../../../images/Logos/Circulo3.png"
+              alt=""></a>
+
+          <div class="modal fade bd-example-modal-lg" id="exampleModal2" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Programa de Plagas y Vectores</h5>
+                  <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span> 
+                  </button>-->
+                </div>
+                <div class="modal-body">
+                  <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                      frameborder="0" width="1200px" height="675px"
+                      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                      src="https://view.genial.ly/5f9f6e72918e3b0d2a834415" type="text/html" allowscriptaccess="always"
+                      allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>Programa de Plagas y Vectores</p>
+        </div>
+      </div>
+      <div class="TituloImagen">
+        <div class="DecripcionTitulo">
+          <a data-toggle="modal" data-target="#exampleModal1"><img src="../../../../images/Logos/Circulo4.png"
+              alt=""></a>
+
+          <div class="modal fade bd-example-modal-lg" id="exampleModal1" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Programa de Aguas Residuales</h5>
+                  <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span> 
+                  </button>-->
+                </div>
+                <div class="modal-body">
+                  <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                      frameborder="0" width="1200px" height="675px"
+                      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                      src="https://view.genial.ly/5f9f18df918e3b0d2a833da4" type="text/html" allowscriptaccess="always"
+                      allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>Programa de Aguas Residuales</p>
+        </div>
+      </div>
+
+      <div class="TituloImagen">
+        <div class="DecripcionTitulo">
+
+          <a data-toggle="modal" data-target="#exampleModal"><img src="../../../../images/Logos/Circulo5.png"
+              alt=""></a>
+
+          <div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Programa de Limpieza y Desinfección</h5>
+                  <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span> 
+                  </button>-->
+                </div>
+                <div class="modal-body">
+                  <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+                      frameborder="0" width="1200px" height="720px"
+                      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                      src="https://view.genial.ly/5f9f3c535210480d31d80940" type="text/html" allowscriptaccess="always"
+                      allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+          <p>Programa de Limpieza y Desinfección</p>
         </div>
       </div>
     </div>
