--- a/src/app/modules/linea-t/linea-t/linea-t.component.html
+++ b/src/app/modules/linea-t/linea-t/linea-t.component.html
@@ -4,7 +4,7 @@
   <!-- Inner -->
   <div class="inner">
     <header>
-      <p style="color: #fff;">Otros entregables.</p>
+      <p style="color: #fff;">Linea Del Tiempo.</p>
     </header>
   </div>
 </div>
